2007-07-23  Jonathan Pobst  <monkey@jpobst.com>

	* TreeView.cs: Implement HitTest.

2007-07-23  Rolf Bjarne Kvinge <RKvinge@novell.com> 

	* DataGridViewTextBoxCell.cs: Use DGV.EditControlInternal instead of
	  manually adding and removing the control from the Controls
	  collecftion.
	* DataGridView.cs: Implement DataGridViewControlCollection. Add an
	  EditingControlInternal property that tracks the editing control.
	  Always keeping the scrollbars in the Controls collection, as MS
	  testing confirms is the right behaviour.

2007-07-23  Rolf Bjarne Kvinge <RKvinge@novell.com> 

	* ScrollableControl.cs: Fix implementation of AutoScrollPosition
	  according to MSDN and new test.

2007-07-20  Jonathan Pobst  <monkey@jpobst.com>

	* TreeNode.cs: Implement ToolTipText.
	* TreeView.cs: Implement tooltips, NodeMouse* events.

2007-07-20  Jonathan Pobst  <monkey@jpobst.com>

	* TreeView.cs: Implement OnNodeMouseClick and OnNodeMouseDoubleClick.

2007-07-20  Jonathan Pobst  <monkey@jpobst.com>

	* TreeNode.cs: Implement ContextMenu, ContextMenuStrip, and Level.
	* TreeView.cs: Use the node's contextmenu[strip] if applicable.

2007-07-20  Ivan N. Zlatev  <contact@i-nz.net>

	* Control.cs, Form.cs, ContainerControl.cs,
	ScrollableControl.cs, ButtonBase.cs:  Added ShouldSerialize
	for misc properties.

2007-07-20  Jonathan Pobst  <monkey@jpobst.com>

	* TreeNode.cs: Implement StateImageIndex and StateImageKey.
	* TreeView.cs: Implement StateImageList.

2007-07-20  Rolf Bjarne Kvinge <RKvinge@novell.com> 

	* Form.cs: Don't check if the current form is the active form before
	  activating it. Fixes #81904.

2007-07-20  Rolf Bjarne Kvinge <RKvinge@novell.com> 

	* Form.cs: Don't check if the current form is the active form before
	  activating it. Fixes #81904.

2007-07-20  Rolf Bjarne Kvinge <RKvinge@novell.com> 

	* TreeView.cs: Apply patch from Tyron (tmm@aon.at). Fixes #81847.

2007-07-20  Rolf Bjarne Kvinge <RKvinge@novell.com> 
